--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     ]
   },
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "react": "^16.8.2",
+    "react-beautiful-dnd": "^10.0.4",
     "react-dom": "^16.8.2"
   },
   "devDependencies": {
@@ -26,10 +28,11 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@types/react": "^16.8.3",
+    "@types/react-beautiful-dnd": "^10.0.3",
     "@types/react-dom": "^16.8.1",
-    "astroturf": "^0.8.5",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.0.0",
@@ -40,8 +43,11 @@
     "favicons": "^5.3.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
+    "linaria": "^1.1.0",
     "lint-staged": "^8.1.4",
+    "mini-css-extract-plugin": "^0.5.0",
     "prettier": "^1.16.4",
+    "style-loader": "^0.23.1",
     "typescript": "^3.3.3",
     "webpack": "^4.29.4",
     "webpack-cli": "^3.2.3",
