--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,7 @@
       }
     ],
     "@babel/preset-typescript",
-    "@babel/preset-react"
+    "@babel/preset-react",
+    "linaria/babel"
   ]
 }
