--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --hot",
+    "styleguide": "docz dev",
     "precommit": "lint-staged",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,6 +25,7 @@
     "react-dom": "^16.8.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
@@ -33,6 +35,9 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
+    "docz": "^0.13.7",
+    "docz-plugin-css": "^0.11.0",
+    "docz-theme-default": "^0.13.7",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.0.0",
@@ -43,7 +48,7 @@
     "favicons": "^5.3.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
-    "linaria": "^1.1.0",
+    "linaria": "git://github.com/everdimension/linaria.git#dist/fix/semicolon-for-robustness",
     "lint-staged": "^8.1.4",
     "mini-css-extract-plugin": "^0.5.0",
     "prettier": "^1.16.4",
