--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     ]
   },
   "dependencies": {
+    "create-subscription": "^16.8.3",
+    "nanoevents": "^1.0.8",
+    "nanoid": "^2.0.1",
     "normalize.css": "^8.0.1",
     "react": "^16.8.2",
     "react-beautiful-dnd": "^10.0.4",
@@ -29,6 +32,9 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
+    "@types/create-subscription": "^16.4.2",
+    "@types/nanoevents": "^1.0.0",
+    "@types/nanoid": "^1.2.1",
     "@types/react": "^16.8.3",
     "@types/react-beautiful-dnd": "^10.0.3",
     "@types/react-dom": "^16.8.1",
