--- a/package.json
+++ b/package.json
@@ -7,19 +7,21 @@
     "start": "webpack-dev-server --hot",
     "styleguide": "docz dev",
     "precommit": "lint-staged",
+    "lint": "eslint \"{*.js,src/**/*.{js,jsx,tsx,ts}}\" && tsc --pretty",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "lint-staged": {
-    "*.{js,ts,tsx,css,json}": [
+    "*.{js,ts,tsx,json}": [
       "prettier --write",
       "git add"
     ]
   },
   "dependencies": {
     "create-subscription": "^16.8.3",
+    "linaria": "^1.1.4",
     "nanoevents": "^1.0.8",
     "nanoid": "^2.0.1",
     "normalize.css": "^8.0.1",
@@ -38,7 +40,7 @@
     "@types/react": "^16.8.3",
     "@types/react-beautiful-dnd": "^10.0.3",
     "@types/react-dom": "^16.8.1",
-    "babel-eslint": "^10.0.1",
+    "@typescript-eslint/parser": "^1.4.1",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
     "docz": "^0.13.7",
@@ -54,7 +56,6 @@
     "favicons": "^5.3.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
-    "linaria": "git://github.com/everdimension/linaria.git#dist/fix/semicolon-for-robustness",
     "lint-staged": "^8.1.4",
     "mini-css-extract-plugin": "^0.5.0",
     "prettier": "^1.16.4",
