--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "noEmit": true,
     "isolatedModules": true,
     "esModuleInterop": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true
   },
   "include": ["src"]
 }
