--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --hot",
     "build": "cross-env NODE_ENV=production webpack",
+    "deploy": "npm run build && gh-pages -d build",
     "styleguide": "docz dev",
     "precommit": "lint-staged",
     "lint": "eslint \"{*.js,src/**/*.{js,jsx,tsx,ts}}\" && tsc --pretty",
@@ -57,6 +58,7 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "favicons": "^5.3.0",
+    "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.4",
